For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Improvements::

* bypass any dry run logic if remaining height on page is less than heading font size
* update import_page method on converter to return true if page was imported (nil otherwise), on par with the functionality of method it replaces

== 2.3.23 (2025-10-26) - @mojavelinux

Bug Fixes::

* fix incorrect spacing between entries in horizontal dlist when entry description crosses page boundary (#2614)

=== Details

{url-repo}/releases/tag/v2.3.23[git tag] | {url-repo}/compare/v2.3.22\...v2.3.23[full diff]

== 2.3.22 (2025-10-23) - @mojavelinux

Bug Fixes::

* don't orphan section with unbreakable option that spans page boundary (#2608)
* correctly track start page number of section title that self-advances when section is breakable (#2609)

=== Details

{url-repo}/releases/tag/v2.3.22[git tag] | {url-repo}/compare/v2.3.21\...v2.3.22[full diff]

== 2.3.21 (2025-10-08) - @mojavelinux

Improvements::

* remove shy hyphens from text in log message when formatted text cannot be parsed (#2599)
* clear float box if next block falls outside of float group (#2596)
* resolve fonts relative to theme dir before GEM_FONTS_DIR if `pdf-fontsdir` not specified (#2349)
* add see and see-also associations on index terms to index (#2527)

=== Details

{url-repo}/releases/tag/v2.3.21[git tag] | {url-repo}/compare/v2.3.20\...v2.3.21[full diff]

== 2.3.20 (2025-09-17) - @mojavelinux

Improvements::

* add symbols for shift, command, option, and return keys to the fallback font
* render horizontal dlist without using prawn-table, allowing the description to exceed the height of one page (#2591)
* allow relative font size for sub and sup to be set independently (support combined setting for backwards compatibility)
* allow value of `base-font-size-min` and `<category>-font-size-min` theme keys to be relative (e.g., 0.75em) (#2547)